--- a/it_modernization/raw_data/people.yaml
+++ b/it_modernization/raw_data/people.yaml
@@ -590,6 +590,10 @@
   sort_name: Spikes
   slug: branden-spikes
 
+- name: Christopher Sweet
+  sort_name: Sweet
+  slug: christopher-sweet
+
 - name: Zach Terrell
   sort_name: Terrell
   slug: zach-terrell
