--- a/it_modernization/postings.yaml
+++ b/it_modernization/postings.yaml
@@ -2,7 +2,7 @@
 meta:
   title: Postings
   version: 1.0.0
-  generated: 2025-04-28
+  generated: 2025-04-30
   note: For doge_base agencies, I set the doge_agency_last to be the end of the current week to demonstrate that DOGE presence
     is likely continued there if not documented
 
@@ -407,7 +407,7 @@ postings:
   last_date: 2024-12-05
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -419,7 +419,7 @@ postings:
   last_date: 2025-03-05
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -432,7 +432,7 @@ postings:
   last_date: 2025-03-28
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -446,7 +446,7 @@ postings:
   last_date: 2025-01-24
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -457,7 +457,7 @@ postings:
   last_date: 2024-12-06
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -471,7 +471,7 @@ postings:
   last_date: 2025-01-24
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -482,7 +482,7 @@ postings:
   last_date: 2024-12-06
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -495,7 +495,7 @@ postings:
   offboard_date: 2025-03-25
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -513,7 +513,7 @@ postings:
   last_date: 2025-04-13
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -526,7 +526,7 @@ postings:
   last_date: 2025-01-24
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -542,7 +542,7 @@ postings:
   onboard_date: 2025-02-18
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -554,7 +554,7 @@ postings:
   last_date: 2025-01-17
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -565,7 +565,7 @@ postings:
   last_date: 2025-01-12
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -578,7 +578,7 @@ postings:
   last_date: 2025-03-27
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -589,7 +589,7 @@ postings:
   last_date: 2025-01-12
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -601,7 +601,7 @@ postings:
   last_date: 2025-01-24
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -613,7 +613,7 @@ postings:
   last_date: 2025-01-24
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -626,7 +626,7 @@ postings:
   last_date: 2025-03-26
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -637,7 +637,7 @@ postings:
   last_date: 2025-01-17
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -648,7 +648,7 @@ postings:
   last_date: 2025-01-17
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -659,7 +659,7 @@ postings:
   last_date: 2025-01-17
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -671,7 +671,7 @@ postings:
   last_date: 2025-02-02
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -682,7 +682,7 @@ postings:
   last_date: 2025-01-21
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -694,7 +694,7 @@ postings:
   onboard_date: 2025-01-23
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -705,7 +705,7 @@ postings:
   last_date: 2025-01-24
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -716,7 +716,7 @@ postings:
   last_date: 2025-01-30
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -727,7 +727,7 @@ postings:
   last_date: 2025-01-30
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -739,7 +739,7 @@ postings:
   onboard_date: 2025-02-14
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -750,7 +750,7 @@ postings:
   last_date: 2025-02-18
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -762,7 +762,7 @@ postings:
   last_date: 2025-04-16
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -774,7 +774,7 @@ postings:
   last_date: 2025-04-16
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -786,7 +786,7 @@ postings:
   last_date: 2025-03-26
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -799,7 +799,7 @@ postings:
   last_date: 2025-04-13
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -811,7 +811,7 @@ postings:
   last_date: 2025-03-26
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -823,7 +823,7 @@ postings:
   last_date: 2025-03-26
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -835,7 +835,7 @@ postings:
   last_date: 2025-03-26
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -846,7 +846,7 @@ postings:
   last_date: 2025-03-26
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -854,10 +854,11 @@ postings:
   first_date: 2025-03-26
   all_dates:
   - 2025-03-26
-  last_date: 2025-03-26
+  - 2025-04-20~
+  last_date: 2025-04-20~
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -868,7 +869,7 @@ postings:
   last_date: 2025-03-26
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -879,7 +880,7 @@ postings:
   last_date: 2025-03-26
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -890,7 +891,7 @@ postings:
   last_date: 2025-03-26
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -902,7 +903,7 @@ postings:
   last_date: 2025-04-16
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -913,7 +914,7 @@ postings:
   last_date: 2025-03-27
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -924,7 +925,7 @@ postings:
   last_date: 2025-03-27
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOGE
@@ -935,7 +936,7 @@ postings:
   last_date: 2025-03-27
   agency_doge_base: true
   doge_agency_first: 2024-11-26
-  doge_agency_last: 2025-04-16
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: DOI
@@ -1988,10 +1989,11 @@ postings:
   all_dates:
   - 2025-02-10
   - 2025-02-26
-  last_date: 2025-02-26
+  - 2025-04-10~
+  last_date: 2025-04-10~
   agency_doge_base: true
   doge_agency_first: 2025-02-10
-  doge_agency_last: 2025-04-15
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: HUD
@@ -2004,7 +2006,20 @@ postings:
   last_date: 2025-04-15
   agency_doge_base: true
   doge_agency_first: 2025-02-10
-  doge_agency_last: 2025-04-15
+  doge_agency_last: 2025-04-20~
+  doge_agency_last_adjusted: 2025-05-04
+
+- agency_id: HUD
+  name: Christopher Sweet
+  first_date: 2025-04-10~
+  all_dates:
+  - 2025-04-10~
+  - 2025-04-15~
+  - 2025-04-20~
+  last_date: 2025-04-20~
+  agency_doge_base: true
+  doge_agency_first: 2025-02-10
+  doge_agency_last: 2025-04-20~
   doge_agency_last_adjusted: 2025-05-04
 
 - agency_id: IAF
